# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "vfs-zip"
version                                 = "0.1.0"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2018"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "vfs-zip: Virtual FileSystem abstractions for ZIP files"
keywords                                = ["vfs", "virtual", "filesystem", "zip", "archive"]
categories                              = ["filesystem"]
exclude = [
    ".vscode/*",
    "test/data/*",
]

[features]
default                                 = ["vfs04"]

[dependencies]
zip                                     = { package = "zip", version = "0.5" }
vfs04                                   = { package = "vfs", version = "0.4", optional = true }
flate2                                  = "<1.0.16" # 1.0.16 bumps MSRV with "extern crate alloc;"
