# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "vfs-zip"
version                                 = "0.2.0"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                              = "https://github.com/MaulingMonkey/vfs-zip.git"
documentation                           = "https://docs.rs/vfs-zip/"
edition                                 = "2018"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "vfs-zip: Virtual FileSystem abstractions for ZIP files"
keywords                                = ["vfs", "virtual", "filesystem", "zip", "archive"]
categories                              = ["filesystem"]
exclude = [
    ".vscode/*",
    "test/data/*",
    "build.rs",     # just use docs.rs
]

[features]
default                                 = ["vfs04", "zip-deflate", "zip-bzip2"]
zip-deflate                             = ["zip/deflate"]
zip-bzip2                               = ["zip/bzip2"]
# non-default
zip-time                                = ["zip/time"]

[dependencies]
zip                                     = { package = "zip", version = "0.5", default-features = false }
vfs04                                   = { package = "vfs", version = "0.4", optional = true }
flate2                                  = "<1.0.16" # 1.0.16 bumps MSRV with "extern crate alloc;"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "external_doc"]
